--- a/src/components/Shared/NavBar/NavBar.css
+++ b/src/components/Shared/NavBar/NavBar.css
@@ -1,8 +1,8 @@
-.anchor-style{
+.nav-anchor-style{
     text-decoration: none;
     color: white;
 }
-.anchor-style:hover{
+.nav-anchor-style:hover{
     text-decoration: none;
     color:white;
     transform: scale(1.1);
